app/assets/stylesheets/components/_card.scss
.card-trip {
  overflow: hidden;
  background: #141526;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
}

.card-trip > img {
  height: 200px;
  width: 100%;
  object-fit: cover;
}

.card-trip h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card-trip p {
  font-size: 12px;
  opacity: .7;
  margin: 0;
}


.card-trip .card-trip-infos {
  padding: 16px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: relative;
}

.card-trip-infos .card-trip-user {
  position: absolute;
  right: 16px;
  top: -20px;
  width: 40px;
}

.avatar {
  width: 40px;
  border-radius: 50%;
}

.avatar-large {
  width: 56px;
  border-radius: 50%;
}

.avatar-bordered {
  width: 40px;
  border-radius: 50%;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
  border: white 1px solid;
}

.avatar-square {
  width: 40px;
  border-radius: 0px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
  border: white 1px solid;
}

.cards-index-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 0;
  grid-gap: 1em;
  margin: 0;
}

.card-wrapper {
  display: flex;
}
.avatar-card {
    position: absolute;
    top: -19px;
    right: 3px;
    box-shadow: 3px 3px 10px 0px rgba(0,0,0,0.40);
}
.card-description-text {
  padding: 4em;
}
.card-text {
  margin-bottom: 0;
}
.img-link {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}
.card-index-sm {
margin: 0;
box-shadow: 7px 6px 10px 0px rgba(0,0,0,0.40);
border: 13px solid white;
position: relative;
  p {
    font-size: 0.8em;
    padding: 0;
    font-weight: lighter;
  }
  h3 {
    margin-top: 0.3em;
    font-size: 1.2rem;
    max-width: 65%;
  }
  .img {
    height: 11em;
    object-fit: cover;
    width: 100%;
  }
}

.card-index-sm-no-box-shadow {
  margin: 0;
  border: 13px solid white;
  position: relative;
    p {
    font-size: 0.8em;
    padding: 0;
    font-weight: lighter;
    }
    h3 {
    margin-top: 0.3em;
    font-size: 1.2rem;
    max-width: 65%;
    }
    .img {
    height: 11em;
    object-fit: cover;
    width: 100%;
    }
}

#user-stock {
  position: sticky;
  top: 0;
}

.card-show {
  position: relative;
  display: flex;
  min-width: 0;
  word-wrap: break-word;
  background-clip: border-box;
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 25px;
  overflow: hidden;
  background: #141526;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  padding: 24px;
  width: 30%;
  justify-content: space-between;
  align-items: center;
}
// news-card partial -------------------------

.news-card {
  border-radius: 25px;
  background-color: #141526;
  height: 240px;

  a {
    color: $blue;
    text-decoration: none
  }

  a:hover {
    text-decoration: none
  }

  .news-picture {
    img {
      border-radius: 25px 0 0 25px;
      height: 100%;
      width: 240px;
      object-fit: cover;
    }
  }

  .news-card-body {
    padding: 20px;
  }
}

.card-dash {
  overflow: hidden;
  background: #141526;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  width: 50%;
  border-radius: 25px;
}

.card-home {
  position: relative;
  display: flex;
  min-width: 0;
  word-wrap: break-word;
  background-clip: border-box;
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 25px;
  overflow: hidden;
  background: #141526;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  padding: 24px;
  justify-content: space-between;
  align-items: center;
}

.card-product {
  overflow: hidden;
  height: 120px;
  background: #141526;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  display: flex;
  align-items: center;
  border-radius: 25px;
}

.card-product img {
  height: 100%;
  width: 120px;
  object-fit: cover;
}

.card-product h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card-product p {
  font-size: 12px;
  line-height: 1.4;
  opacity: .7;
  margin-bottom: 0;
  margin-top: 8px;
}

.card-product .card-product-infos {
  padding: 16px;
}



// dashboard small card ----------------------------------

.card-dashboard {

}
.chart-card {
  height: 10em;
  width: 100%;
}
.card-sm-font {
  color: $font-color;
}

// grid --------------

.stock-cards {
  display: flex;
  flex-direction: column;
  grid-gap: 8px;
  h3 {
    font-size: 16px;
  }
}

// show page right card -----------------------

.card-show-margin {
  margin: 2em 0;
}

.form-purchase {
  margin-left: 4em;
}
.width-fit-content {
  width: fit-content;
}
.width-modal {
  width: 50%;
  margin-right: -12em;
}
// Smallest device
@media (min-width: 100px) and (max-width: 575px) {
  .stock-cards {
    grid-template-columns: 1fr;
  }
}

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
  .stock-cards {
    grid-template-columns: 1fr;
  }
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
  .stock-cards {
    grid-template-columns: 1fr;
  }
}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {
  .stock-cards {
    grid-template-columns: 1fr;
  }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {
  .stock-cards {
    grid-template-columns: 1fr;
  }
}

